--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
         <div class="header__about">
             <div class="container">
                 <div class="header__about__inner">
+
                     <div class="header__logo">
                         <img src="./assets/img/Logo.svg" alt="logo">
                     </div>
                     <div class="header__location">
                         <img src="./assets/img/location-icon.svg" alt="call location">
-                        <p class="header__location">г. Санкт-Петербург, Невский проспект 118</p>
+                        <p class="header__location-text">г. Санкт-Петербург, Невский проспект 118</p>
                     </div>
                     <div class="header__contacts">
-                        <img src="./assets/img/call__icon.png" alt="call icon">
-                        <a class="header__contact" href="tel:+79999999999">+7(999)999-99-99</a>
+
+                        <a class="header__contact" href="tel:+79999999999"> <img src="./assets/img/call__icon.png" alt="call icon">+7(999)999-99-99</a>
                         <div class="header__contact__block">
                             <button class="header__button">
                                 Заказать звонок
@@ -37,6 +38,8 @@
                             </div>
                         </div>
                     </div>
+                    <div class="header__burger"><span></span></div>
+                    <button class="header__order-call">Заказать звонок <img src="./assets/img/call-centre-outline.svg" alt="call"></button>
 
                 </div>
             </div>
@@ -55,6 +58,15 @@
                             <li class="header__item"><a href="#contact" class="header__link">Контакты</a></li>
                         </ul>
                     </nav>
+                    <div class="header__subabout__mobile-block">
+                        <div class="header__subabout__societies">
+                            <a href="#" class="header__subabout__society"><img src="./assets/img/instagram-icon.svg" alt="instagram"></a>
+                            <a href="#" class="header__subabout__society"><img src="./assets/img/telegram__icon.png" alt="telegram"></a>
+                            <a href="#" class="header__subabout__society"><img src="./assets/img/vk-icon.svg" alt="vk"></a>
+                            <a href="#" class="header__subabout__society"><img src="./assets/img/whatsapp__icon.png" alt="whatsApp"></a>
+                        </div>
+                        <a href="tel:8999999999" class="header__subabout__tel"><img src="./assets/img/call__icon.png" alt=""> +7(999)999-99-99 </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -76,13 +88,15 @@
 
 
                 </div>
+                <!-- <div class="about__ibg">
+                </div> -->
             </div>
 
         </div>
         <div class="services">
             <div class="container">
                 <div class="services__inner">
-                    <h3 class="services__title title">
+                    <h3 class="title services__title">
                         Услуги
                     </h3>
                     <div class="services__group">
@@ -375,7 +389,7 @@
                         При определении стоимости учитывается объем и сложность дела, примерное время, которое необходимо затратить на ведение этого дела, а также стоимость ресурсов и специалистов, которых необходимо привлечь к делу. Для этого и назначается встреча с адвокатом,
                         где изучается дело, сообщается цена, порядок действий и перспективы дела.
                     </p>
-                    <button class="price__button">Узнать точную цену</button>
+                    <button class="price__button">Узнать цену за 1 минуту</button>
                 </div>
             </div>
         </div>
@@ -390,6 +404,12 @@
                             <a class="contacst__info contacts__tele" href="tel:+79999999999"><img src="./assets/img/tele-icon2.svg" alt="call icon"> +7(999)999-99-99</a>
                             <a class=" contacst__info contacts__email" href="mailto:a@mail.ru"><img src="./assets/img/email-icon.svg" alt="e-mail">a@mail.ru</a>
                             <p class="contacst__info contacts__adress"> <img src="./assets/img/location-icon2.svg" alt="location">г. Санкт-Петербург, Невский проспект 118</p>
+                            <p class="contacst__info contacts__societies">
+                                <a href="#" class="contact__society"><img src="./assets/img/telegram__icon.png" alt="telegarm"></a>
+                                <a href="#" class="contact__society"><img src="./assets/img/whatsapp__icon.png" alt="whats app"></a>
+                                <a href="#" class="contact__society"><img src="./assets/img/vk-icon.svg" alt="VK"></a>
+                                <a href="#" class="contact__society"><img src="./assets/img/instagram-icon.svg" alt="instagram"></a>
+                            </p>
                             <button class="contacts__button">Заказать звонок</button>
                         </div>
                         <div class="contacts__map">
